# teamy

./: .bazeliskrc  .bazelrc  .gitignore  .pre-commit-config.yaml  .super-linter.yml  BUILD.bazel  MODULE.bazel  WORKSPACE.bazel  bazel-bin  bazel-out  bazel-teamy  bazel-testlogs
.github/workflows/: linter.yml
.ijwb/: .bazelproject
tools/format/: BUILD.bazel
tools/lint/: BUILD.bazel  linters.bzl
