load("@aspect_rules_lint//format:defs.bzl", "format_multirun")
#load("@npm//:prettier/package_json.bzl", prettier = "bin")

#prettier.prettier_binary(
#    name = "prettier",
#    env = {"BAZEL_BINDIR": "."},
#    fixed_args = ["--loglevel=warn"],
#)

format_multirun(
    name = "format",

#    css = ":prettier",
    go = "@aspect_rules_lint//format:gofumpt",
#    graphql = ":prettier",
#    java = ":java-format",
#    javascript = ":prettier",
#    markdown = ":prettier",
#    protocol_buffer = "//tools/lint:buf",
    python = "@aspect_rules_lint//format:ruff",
    yaml = "@aspect_rules_lint//format:yamlfmt",
#    rust = "@rules_rust//tools/rustfmt:upstream_rustfmt",
#    scala = ":scalafmt",
#    shell = "@aspect_rules_lint//format:shfmt",
#    sql = ":prettier",
#    starlark = "@buildifier_prebuilt//:buildifier",
#    swift = ":swiftformat",
#    terraform = "@aspect_rules_lint//format:terraform",
    visibility = ["//:__subpackages__"],
)
