load("@aspect_rules_lint//format:defs.bzl", "format_multirun")
load("@aspect_rules_format_npm//:prettier/package_json.bzl", prettier = "bin")

prettier.prettier_binary(
    name = "prettier",
    env = {"BAZEL_BINDIR": "."},
    fixed_args = ["--loglevel=warn"],
)

format_multirun(
    name = "format",
    go = "@aspect_rules_lint//format:gofumpt",

    #    graphql = ":prettier",
    #    javascript = ":prettier",
    #    markdown = ":prettier",
    #    sql = ":prettier",
    #    css = ":prettier",
    protocol_buffer = "//tools/lint:buf",
    python = "@aspect_rules_lint//format:ruff",
    rust = "@rules_rust//tools/rustfmt:upstream_rustfmt",
    shell = "@aspect_rules_lint//format:shfmt",
    starlark = "@buildifier_prebuilt//:buildifier",
    terraform = "@aspect_rules_lint//format:terraform",

    #    scala = ":scalafmt",
    #    java = ":java-format",
    #    swift = ":swiftformat",
    visibility = ["//:__subpackages__"],
    yaml = "@aspect_rules_lint//format:yamlfmt",
)