"""Definition of the formatter binary

This is in its own package because it has so many loading-time symbols,
we don't want to trigger eager fetches of these for builds that don't want to run format.
"""

load("@aspect_rules_lint//lint:vale_library.bzl", "VALE_STYLES")
load("@rules_java//java:defs.bzl", "java_binary")

package(default_visibility = ["//:__subpackages__"])

alias(
    name = "buf",
    actual = "@rules_buf_toolchains//:buf",
)
